--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.90.1",
     "idb": "^8.0.3",
     "next": "16.1.1",
     "react": "19.2.3",
